--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	        <li>Vagrant</li>
 	        <li>Docker</li>
 	        <li>Ansible</li>
-	        <li>Integração Continua Precisa colocar o título completo</li>
+	        <li>Integração Continua</li>
 	    </ul>
 	</body>
 
