--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	        <li>Docker</li>
 	        <li>Ansible</li>
 	        <li>Integração Continua</li>
+	        <li>Kubernestes</li>
 	    </ul>
 	</body>
 
