--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	        <li>Docker</li>
 	        <li>Ansible</li>
 	        <li>Integração Continua</li>
-	        <li>Kubernestes</li>
+	        <li>Kubernestes ONE</li>
 	    </ul>
 	</body>
 
