--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>CURSOS de DevOps da Alura ONE</title>
+		<title>Curso DevOps da Alura ONE</title>
 	</head>
 	
 	<body>
